--- a/Rohan_MicroProject2/style.css
+++ b/Rohan_MicroProject2/style.css
@@ -142,7 +142,7 @@ input::placeholder {
     padding-left: 40px;
     width: 190px;
     height: 80px;
-    /*box-shadow: rgba(0, 0, 0, 0.4);*/
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.4);
 }
 
 #Tab1 {
