--- a/Rohan_MicroProject4/style3.css
+++ b/Rohan_MicroProject4/style3.css
@@ -123,9 +123,9 @@ body {
 }
 
 #Close {                /* 2 */
-    position: fixed;
-    bottom: 61.5%;
-    left: 76%;
+    position: absolute;
+    bottom: 95%;
+    left: -8%;
     background-color: rgba(255, 0, 0, 1);
     border-radius: 100px;
     border: 5px solid white;
