--- a/Rohan_MicroProject4/style4.css
+++ b/Rohan_MicroProject4/style4.css
@@ -123,9 +123,9 @@ body {
 }
 
 #Close {
-    position: fixed;
-    bottom: 61.7%;
-    left: 74.7%;
+    position: absolute;
+    bottom: 95%;
+    left: 93%;
     background-color: rgba(255, 0, 0, 1);
     border-radius: 100px;
     border: 5px solid white;
