--- a/Rohan_MicroProject4/style.css
+++ b/Rohan_MicroProject4/style.css
@@ -245,7 +245,7 @@ body {
     position: absolute;
     bottom: 50%;
     left: 40.4%;
-    width: 199px;
+    width: 14.6%;
     height: 15px;
     background-color: rgba(0, 0, 0, 0.64);
 }
@@ -254,7 +254,7 @@ body {
     position: absolute;
     bottom: 35%;
     left: 50%;
-    width: 112px;
+    width: 8.2%;
     height: 15px;
     transform: rotate(-50deg);
     background-color: rgba(0, 0, 0, 0.64);
@@ -264,7 +264,7 @@ body {
     position: absolute;
     bottom: 34.2%;
     left: 37%;
-    width: 121.5px;
+    width: 8.9%;
     height: 15px;
     background-color: rgba(0, 0, 0, 0.64);
     transform: rotate(-133deg);
